Show the expression as string (a new way)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>RegExp Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="shortcut icon" href="https://williansoaresdev.github.io/willregex/favicon.ico" type="image/x-icon" />
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -49,7 +52,7 @@
         $("#edtOnlyNumbers").keyup(function(){
             regexCall(willRegEx.onlyNumbers($("#edtOnlyNumbers").val()), "smlOnlyNumbers");
         });
-        $("#expOnlyNumbers").val(willRegEx.onlyNumbers('', willRegEx.constants.RETURN_EXPR));
+        $("#expOnlyNumbers").val(willRegEx.onlyNumbersToString());
 
     });
 </script>
