Disable the regexp input

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="text" id="edtOnlyNumbers" class="form-control" placeholder="Only numbers accepted here" />
             </div>
             <div class="col-md-6">
-                <input type="text" id="expOnlyNumbers" class="form-control" value="Code" />
+                <input type="text" id="expOnlyNumbers" disabled class="form-control" value="Code" />
             </div>
         </div>
         <div>
